# Todo-List

./: .pre-commit-config.yaml  Makefile  README.md  TASK.md
todo_list/: .env.example  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
todo_list/apps/todo/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
todo_list/apps/todo/migrations/: 0001_initial.py
todo_list/apps/todo/tests/: conftest.py  test_todo_model.py  test_todo_viewset.py
todo_list/apps/user/: admin.py  models.py  permissions.py  serializers.py
todo_list/apps/user/migrations/: 0001_initial.py  0002_user_is_email_verified.py  0003_alter_user_managers.py
todo_list/apps/user/tests/: conftest.py  test_user_model.py
todo_list/apps/user_auth/: __init__.py  helpers.py  models.py  serializers.py  urls.py
todo_list/apps/user_auth/google_oauth2/: apps.py  serializers.py  settings.py  urls.py  views.py
todo_list/apps/user_auth/jwt_auth/: apps.py  settings.py  tasks.py  urls.py  views.py
todo_list/apps/user_auth/jwt_auth/migrations/: 0001_initial.py
todo_list/apps/user_auth/tests/: conftest.py  test_celery_tasks.py  test_google_oauth2.py  test_jwt_auth.py
todo_list/config/: asgi.py  urls.py  wsgi.py
todo_list/config/settings/: base.py  dev.py  prod.py
todo_list/core/: asgi.py  celery.py  conftest.py  docs.py  urls.py  wsgi.py
todo_list/core/settings/: base.py  dev.py  prod.py
